tests/snapshots/run_wpt_conformance__coreml_sqrt_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sqrt.https.any.js",
    "sqrt float32 1D tensor",
    "coreml",
    "PASS",
)
