tests/snapshots/run_wpt_conformance__coreml_sub_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sub.https.any.js sub float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([153, 84, 62, 75, 86, 212, 129, 210, 189, 212, 140, 192, 53, 213, 202, 75, 214, 211, 31, 80, 41, 85, 175, 212, 228, 84, 13, 82, 202, 204, 95, 213, 146, 85, 184, 77, 9, 85, 26, 86, 152, 82, 147, 85, 32, 205, 56, 86]);
    operand_1: f16[24] @bytes([36, 210, 6, 81, 58, 71, 148, 85, 23, 213, 116, 83, 158, 73, 28, 82, 84, 85, 236, 78, 191, 79, 196, 208, 50, 213, 99, 213, 49, 76, 196, 81, 28, 207, 15, 79, 104, 80, 209, 212, 60, 211, 69, 211, 223, 78, 0, 80]);
  }

  nodes {
    [output] = sub(operand_0, operand_1, label="");
  }

  outputs { output; }
}
